// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders KuiFieldGroupSection 1`] = `
<div
  aria-label="aria-label"
  class="kuiFieldGroupSection testClass1 testClass2"
  data-test-subj="test subject string"
>
  children
</div>
`;

exports[`renders KuiFieldGroupSection isWide 1`] = `
<div
  aria-label="aria-label"
  class="kuiFieldGroupSection testClass1 testClass2 kuiFieldGroupSection--wide"
  data-test-subj="test subject string"
>
  children
</div>
`;
